Fix a crash when moving local selection mask

That is a regression from d60b315d4c51895eec12288e96790b6a4a602b01

BUG:426816